--- a/en_index.html
+++ b/en_index.html
@@ -75,7 +75,7 @@
 								<li class="current"><a href="#header">Home</a></li>
 								<li><a href="#service">What's OmegaT?</a></li>
 								<li><a href="#features">What's special?</a></li>
-								<li><a target="_blank" href="https://omegat.org/zh_CN/documentation">How to use?</a></li>
+								<li><a target="_blank" href="https://omegat.org/documentation">How to use?</a></li>
 								<li><a href="index.html">中文</a></li>
 							</ul>
 						</div>
@@ -360,7 +360,7 @@
 				<ul class="list">
 					<li><a target="_blank" href="https://www.facebook.com/OmegaTOfficial"><i class="fa fa-facebook"></i></a></li>
 					<li><a target="_blank" href="https://twitter.com/OmegaTOfficial"><i class="fa fa-twitter"></i></a></li>
-					<li><a target="_blank" href="https://omegat.org/zh_CN/contact"><i class="fa fa-envelope"></i></a></li>
+					<li><a target="_blank" href="https://omegat.org/contact"><i class="fa fa-envelope"></i></a></li>
 					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 					<li><a href="#"><i class="fa fa-linked-in"></i></a></li>
 				</uL>
